# django-aggregation-talk

./: package.json  slides.md
poc/: asgi.py  pyproject.toml  settings.py  urls.py  wsgi.py
poc/visits/: admin.py  models.py
poc/visits/management/commands/: make_demo_data.py
poc/visits/migrations/: 0001_initial.py  0002_visitssummaryview.py  0003_visitssummarymaterializedview.py
poc/visits/views/: aggregate.py  materialized_view.py  view.py
