[tool.poetry]
name = "poc"
version = "0.1.0"
description = ""
authors = ["Mikuláš Poul <mikulas.poul@xelix.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.0.6"
django-pgviews-redux = "^0.10.0"
djangorestframework = "^3.15.1"
psycopg = "^3.1.19"
factory-boy = "^3.3.0"
tqdm = "^4.66.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
